Make the plugin compatible with Java 8